--- a/Pages/about.html
+++ b/Pages/about.html
@@ -39,6 +39,6 @@
                 </div>
             </div>
         </div>
-        <script src="/Scripts/inserter.js"></script>
+        <script src="/Scripts/inserter.js" type="module"></script>
     </body>
 </html>
