--- a/Pages/eventos.html
+++ b/Pages/eventos.html
@@ -59,6 +59,6 @@
                 </p>
             </div>
         </div>
-        <script src="/Scripts/inserter.js"></script>
+        <script src="/Scripts/inserter.js" type="module"></script>
     </body>
 </html>
