--- a/Pages/colab.html
+++ b/Pages/colab.html
@@ -65,6 +65,6 @@
                 </div>
             </div>
         </div>
-        <script src="/Scripts/inserter.js"></script>
+        <script src="/Scripts/inserter.js" type="module"></script>
     </body>
 </html>
