--- a/Pages/proximasFechas.html
+++ b/Pages/proximasFechas.html
@@ -15,6 +15,6 @@
                 <img src="/imgs/S2024-BCN.jpg" alt="">
             </div>
         </div>
-        <script src="/Scripts/inserter.js"></script>
+        <script src="/Scripts/inserter.js" type="module"></script>
     </body>
 </html>
